# Learning-OpenCV-QT5.6

./: CMakeLists.txt  README.MD  main.cpp
